# ErrorManager

./: .gitignore  error_manager.db
backend/: README.md  database.py  main.py  pyproject.toml
backend/db_models/: db_models.py  error_models.py
backend/helpers/: dependencies.py  helpers.py  lang_tools.py
backend/pydantic_models/: chat_models.py  error_models.py  langgraph_models.py  project_models.py
backend/routes/: chat.py  error_logs.py  projects.py
backend/services/: langgraph.py  vector_db.py
