[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipython>=9.9.0",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "pillow>=12.1.0",
    "sqlalchemy>=2.0.46",
]
